main.tf
# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
  access_key = "AKIAU3IOQ6XW66XZAJP2"
  secret_key = "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"
}

# PART 1

# resource "<provider>_<resource_type>" "name" {
#     config options...
#     key1 = "value"
#     key2 = "value"
# }

# resource "aws_instance" "my_first_server" {
#     ami           = "ami-085925f297f89fce1"
#     instance_type = "t2.micro"

#     tags = {
#         Name = "ubuntu_server"
#     }
# }

# resource "aws_vpc" "vpc_1" {
#   cidr_block = "10.0.0.0/16"

#   tags = {
#     Name = "prod_vpc"
#   }
# }

# resource "aws_subnet" "subnet_1" {
#   vpc_id     = aws_vpc.vpc_1.id
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "prod_subnet"
#   }
# }

# resource "aws_vpc" "vpc_2" {
#   cidr_block = "10.0.0.0/16"

#   tags = {
#     Name = "prod_vpc"
#   }
# }

# resource "aws_subnet" "subnet_2" {
#   vpc_id     = aws_vpc.vpc_2.id
#   cidr_block = "10.0.1.0/24"

#   tags = {
#     Name = "prod_subnet"
#   }
# }

# PART 2

# 1. Create vpc
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "production"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id
}

# 3. Create Custom Route Table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}

# 4. Create a Subnet 
resource "aws_subnet" "subnet-1" {
  vpc_id            = aws_vpc.prod-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "prod-subnet"
  }
}

# 5. Associate subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create Security Group to allow port 22,80,443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}

# 7. Create a network interface with an ip in the subnet that was created in step 4
resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]
}

# 8. Assign an elastic IP to the network interface created in step 7
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]
}

output "server_public_ip" {
  value = aws_eip.one.public_ip
}

# 9. Create Ubuntu server and install/enable apache2
resource "aws_instance" "web-server-instance" {
  ami               = "ami-085925f297f89fce1"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  key_name          = "main-key"

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-server-nic.id
  }

  user_data = <<-EOF
                #!/bin/bash
                sudo apt update -y
                sudo apt install apache2 -y
                sudo systemctl start apache2
                sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                EOF
  tags = {
    Name = "web-server"
  }
}

output "server_private_ip" {
  value = aws_instance.web-server-instance.private_ip

}

output "server_id" {
  value = aws_instance.web-server-instance.id
}

# PART 3

# variable "subnet_prefix" {
#     description = "cidr block for the subnet"
#     default = "10.0.42.0/24"
#     type = any
# }

# resource "aws_vpc" "prod-vpc" {

#     cidr_block = "10.0.0.0/16"
#     tags = {
#         Name = "production"
#     }

# }

# resource "aws_subnet" "subnet-1" {

#     vpc_id = aws_vpc.prod-vpc.id
#     cidr_block = var.subnet_prefix
#     availability_zone = "us-east-1a"

#     tags = {
#         Name = "Prod-subnet"
#     }

# }
